There was a dependency to unbbayes 4.1.0 missing in the pom file.

--- a/unbbayes.prs.mebn.ssbn.ssmsbn/.settings/org.maven.ide.eclipse.prefs
+++ b/unbbayes.prs.mebn.ssbn.ssmsbn/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Mon May 17 18:52:10 BRT 2010
+#Fri Jun 11 13:51:28 EDT 2010
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
