--- a/unbbayes.prs.mebn.ssbn.ssmsbn/.project
+++ b/unbbayes.prs.mebn.ssbn.ssmsbn/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>unbbayes.prs.mebn.ssbn.ssmsbn</name>
+	<name>SSMSBN</name>
 	<comment></comment>
 	<projects>
 	</projects>
