--- a/unbbayes.io.xmlbif.version7/plugins/unbbayes.io.XMLBIFIO/plugin.xml
+++ b/unbbayes.io.xmlbif.version7/plugins/unbbayes.io.XMLBIFIO/plugin.xml
@@ -2,12 +2,12 @@
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is one of 3 basic I/O modules for the core (PN module). At least one must be present in order
      to use I/O for PN module -->
-<plugin id="unbbayes.io.XMLBIFIO" version="1.0.0">
+<plugin id="unbbayes.io.XMLBIFIO" version="2.0.0">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
     </requires>
     <extension plugin-id="unbbayes.util.extension.core" point-id="PNIO" id="XMLBIFIO">
-        <parameter id="class" value="unbbayes.io.XMLBIFIO" />
+        <parameter id="class" value="unbbayes.io.xmlbif.version7.BaseXMLBIFIO" />
         <parameter id="name" value="XMLBIF Base" />
     </extension>
 </plugin>
