--- a/unbbayes.io.xmlbif.version7/plugins/unbbayes.core/plugin.xml
+++ b/unbbayes.io.xmlbif.version7/plugins/unbbayes.core/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
-<plugin id="unbbayes.util.extension.core" version="1.0.0"
+<plugin id="unbbayes.util.extension.core" version="1.0.1"
     class="unbbayes.util.extension.PluginCore">
     <runtime>
         <library id="core" path="/" type="code">
@@ -15,20 +15,30 @@
     	 							(a constructor with no parameters) if factoryClass is not provided.
     	    builder: a class to instantiate the module. It must implement  unbbayes.util.extension.UnBBayesModuleBuilder.
     	    			  Use this field if "class" cannot provide a plausible default constructor.
-    	 	name: name of the functionality. It must be unique.
+    	 	name: name of the functionality. It must be unique. If null, unbbayes.util.extension.UnBBayesModule#getModuleName() 
+    	 	              or unbbayes.util.extension.UnBBayesModuleBuilder will be used.
     	 	description: tool tip text. Currently, no localization is supported.
     	 	icon: icon (image) to be used at the tool bar's button. 
+    	 	category: this is a name read by UnBBayes in order to categorize a module.
+    	 	          currently, the default values are: 
+    	 	          			- none (no definition or empty) or "plugins": the module's menu will be added to "plugin" menu; 
+    	 	          			- "bn": the button will be added into "new" tool bar and the module's menu will be added into "new" menu;
+    	 	          			- "tool": the module's menu will be added into "tool" menu; 
+    	 	          			- "sampling": the module's menu will be added into "sampling" menu;
+    	 	          			- user-defined (any category not listed above): the module's menu will be added into a new menu, but no localization support
+    	 	          			              will be availabe.
     -->
     <extension-point id="Module">
         <parameter-def id="class"/>
         <parameter-def id="builder" multiplicity="none-or-one" />
-        <parameter-def id="name"/>
+        <parameter-def id="name" multiplicity="none-or-one" />
 		<parameter-def id="description" multiplicity="none-or-one" />
 		<parameter-def id="icon" multiplicity="none-or-one" />
+		<parameter-def id="category" multiplicity="none-or-one" />
     </extension-point>
     
     <!-- BN inference algorithm extension point and its option panel. 
-    	 Hot plug is enabled (since it is reloaded at each call for GlobalOptionsDialog).
+    	 Hot plug is enabled.
     	 This extension point is a swing JPanel used as a form in order to fill in some initialization attributes for inference algorithms.
     	 Inference algorithm are basically called during BN compilation.
     	 This extension point must extend unbbayes.util.extension.bn.inference.InferenceAlgorithmOptionPanel and provide the following informations:
@@ -41,6 +51,7 @@
         <parameter-def id="class"/>
     </extension-point>
      <!-- Probabilistic Network I/O extension point. 
+     	 Hot plug is enabled.
     	 This extension point is basically a set of different classes implementing
     	 unbbayes.io.BaseIO, in order to add new IO functions into basic PN
     	 module. The class must contain a public default constructor (no parameters)
@@ -48,12 +59,20 @@
     	 adds a pair of IO and Module (IO routines and a whole module in order to treat those files),
     	 but this (PNIO) extension point adds a new IO routine into the basic PN (Probabilistic Network)
     	 module, which is already incorporated into core.
+    	 	Parameters:
+    	 		class: this is the class to implement unbbayes.io.BaseIO. It MUST have a default constructor
+    	 			   with no parameters.
+    	 	    name: this is basically what an user will see when a conflict occurs 
+    	 	          (when more than 1 class can handle a given file).
     -->
     <extension-point id="PNIO">
         <parameter-def id="class"/>
+        <parameter-def id="name"/>
     </extension-point>
     <!-- 
     	 ResourceBundle extension point. 
+    	 Hot plug is partially implemented (resource bundles already loaded are not replaced, but we
+    	 can load new resource bundles by pressing the "Reload Plugin" option).
     	 This extension point is basically a set of different ResourceBundle, in order to implement
     	 localization (add new languages) using plugins.
     	 The classes must extend java.util.ListResourceBundle, respect package position,
