Doing some refactories to show some GUI informations which were hidden with no apparent reason, thus, making it easier to extend GUI classes.

--- a/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
+++ b/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes' MEBN module. -->
-<plugin id="unbbayes.prs.mebn" version="1.6.0">
+<plugin id="unbbayes.prs.mebn" version="1.7.0">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
     </requires>
@@ -15,7 +15,7 @@
         </library>
         <!-- It seems that loaders does not work as expected on jar files -->
         <!-- If you change/add the libraries, change/add these library declaration too -->
-        <library id="unbbayes.prs.mebn" path="unbbayes.prs.mebn-1.6.0.jar" type="code" >
+        <library id="unbbayes.prs.mebn" path="unbbayes.prs.mebn-1.7.0.jar" type="code" >
         	<export prefix="*"/>
         </library>
         <library id="iri" path="lib/iri-2.4.jar" type="code">
@@ -113,6 +113,28 @@
         <parameter-def id="class"/>
         <parameter-def multiplicity="none-or-one" id="name"/>
         <parameter-def multiplicity="none-or-one" id="icon"/>
+        <parameter-def multiplicity="none-or-one" id="description"/>
+    </extension-point>
+    
+    
+    <!-- MEBN tool panels extension point. 
+     	 Hot plug is enabled.
+    	 This extension point is basically a small thin panel to edit a MEBN and its associated objects,
+    	 and it will be displayed as one of the tabs at the edition panel (left side panel) at
+    	 unbbayes.gui.mebn.MEBNEditionPane.
+    	 It must implment unbbayes.gui.mebn.extension.editor.IMEBNEditionPanelBuilder, in order to add new panel
+    	 into this MEBN editor. The class must contain a public default constructor (no parameters).
+    	 	Parameters:
+    	 		class: this is a class implementing unbbayes.gui.mebn.extension.editor.IMEBNEditionPanelBuilder. 
+    	 		       It MUST provide a default constructor with no parameters.
+    	 	    icon: this is an icon for the panel built from class.
+    	 	    name: this is basically a name to identify a particular panel.
+    	 	    description: this is basically a tool tip text for a panel.
+    -->
+    <extension-point id="MEBNToolPanel">
+        <parameter-def id="class"/>
+        <parameter-def id="name"/>
+        <parameter-def id="icon"/>
         <parameter-def multiplicity="none-or-one" id="description"/>
     </extension-point>
     
