--- a/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
+++ b/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
-<!-- This is the plugin descriptor for UnBBayes' PRM module. -->
+<!-- This is the plugin descriptor for UnBBayes-MEBN extension to add protege functions and OWL2/PR-OWL2 features. -->
+<!-- This version uses Protege4.1 as a library, but because protege4.1 does not work in non OSGI environments, several adaptations had to be made... -->
 <plugin id="unbbayes.gui.mebn.ontology.protege" version="0.1.1">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
@@ -9,6 +10,14 @@
     <runtime>
        	<!-- Because dist.xml creates the resources folder, we must include it -->
         <library type="resources" path="resources/" id="resources">
+            <!-- This folder contains JARS that Protege4.1 loads using OSGI. Because OSGI and JPF uses different (sometimes incompatible) mechanisms for plug-ins, they must be separated -->
+        	<export prefix="*"/>
+        </library>
+        <library type="resources" path="conf/" id="conf">
+        	<export prefix="*"/>
+        </library>
+        <library type="code" path="lib/" id="lib">
+        	<!-- This is where protege resources resides -->
         	<export prefix="*"/>
         </library>
         <!-- It seems that loaders does not work as expected on jar files -->
@@ -16,15 +25,78 @@
         <library id="unbbayes.gui.mebn.ontology.protege" path="unbbayes.gui.mebn.ontology.protege-0.1.1.jar" type="code" >
         	<export prefix="*"/>
         </library>
+        <!-- TODO JPF seems to fail on importing JARs if it is not specifically mentioned (wildcards on folders seems to fail) -->
+        <library id="jxp" path="lib/jxp.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="looks" path="lib/looks.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="mdock" path="lib/mdock.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.coode.dlquery" path="lib/org.coode.dlquery.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.coode.owlviz" path="lib/org.coode.owlviz.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.eclipse.equinox.supplement" path="lib/org.eclipse.equinox.supplement.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.protege.common" path="lib/org.protege.common.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.protege.editor.core.application" path="lib/org.protege.editor.core.application.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.protege.editor.owl" path="lib/org.protege.editor.owl.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.protege.ontograf" path="lib/org.protege.ontograf.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.semanticweb.HermiT" path="lib/org.semanticweb.HermiT.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.semanticweb.owl.owlapi" path="lib/org.semanticweb.owl.owlapi.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="protege-owlapi-extensions" path="lib/protege-owlapi-extensions.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="swing-worker" path="lib/swing-worker.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="xmlcatalog" path="lib/xmlcatalog.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="protegejaxb" path="lib/org.protege.jaxb.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.eclipse.equinox.common" path="lib/org.eclipse.equinox.common-3.5.0.v20090520-1800.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="org.eclipse.equinox.registry" path="lib/org.eclipse.equinox.registry-3.4.100.v20090520-1800.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
     </runtime>
-     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="Properties2Node">
+     
+     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="Protege41Entities">
+        <parameter id="class" value="unbbayes.gui.mebn.extension.Protege41EntityPanelBuilder" />
+        <parameter id="name" value="OWL2Entities" />
+        <parameter id="description" value="Edit OWL2 entities using Protégé 4.1 editor" />
+        <parameter id="icon" value="class.gif" />
+    </extension>
+    
+    <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="Properties2Node">
         <parameter id="class" value="unbbayes.gui.mebn.extension.OWLPropertyImportPanelBuilder" />
         <parameter id="name" value="Property2Node" />
         <parameter id="icon" value="properties2node.png" />
         <parameter id="description" value="Convert OWL properties to MEBN resident node" />
     </extension>
     
-     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="ProtegeClasses">
+    <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="ProtegeClasses">
         <parameter id="class" value="unbbayes.gui.mebn.extension.ProtegeOWLClassPanelBuilder" />
         <parameter id="name" value="OWLClasses" />
         <parameter id="description" value="Edit OWL classes using Protégé editor" />
