--- a/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn.kb.powerloom.stub/plugin.xml
+++ b/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn.kb.powerloom.stub/plugin.xml
@@ -5,6 +5,11 @@
     <requires>
         <import plugin-id="unbbayes.prs.mebn"/>
     </requires>
+    <runtime>
+	    <library id="unbbayes.prs.mebn.kb.powerloom.stub" path="class/" type="code" >
+	        	<export prefix="*"/>
+	    </library>
+    </runtime>
     <extension plugin-id="unbbayes.prs.mebn" point-id="KnowledgeBase" id="PowerLoomKB">
         <parameter id="class" value="unbbayes.prs.mebn.kb.extension.PowerLoomExtensionBuilder" />
         <parameter id="name" value="Simple PowerLoom Extension" />
