--- a/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
+++ b/unbbayes.gui.mebn.ontology.protege/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
@@ -91,7 +91,7 @@
     
     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="OWL2Properties2Node">
         <parameter id="class" value="unbbayes.gui.mebn.extension.OWL2PropertyImportPanelBuilder" />
-        <parameter id="name" value="OWL2Property2Node" />
+        <parameter id="name" value="Property2Node" />
         <parameter id="icon" value="properties2node.png" />
         <parameter id="description" value="Convert OWL2 properties to MEBN resident nodes" />
     </extension>
@@ -119,7 +119,7 @@
     
     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="Properties2Node">
         <parameter id="class" value="unbbayes.gui.mebn.extension.OWLPropertyImportPanelBuilder" />
-        <parameter id="name" value="Property2Node" />
+        <parameter id="name" value="Properties2Node" />
         <parameter id="icon" value="properties2node.png" />
         <parameter id="description" value="Convert OWL properties to MEBN resident node" />
     </extension>
