Changed it in order to work with the continuous node from GMM.

--- a/unbbayes.io.xmlbif.version7/.settings/org.maven.ide.eclipse.prefs
+++ b/unbbayes.io.xmlbif.version7/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Mon Jul 12 21:13:24 EDT 2010
+#Fri Jan 21 11:55:54 EST 2011
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
