(bug:3260712) Updated the pom.xml in order to use the fixed version of UnBBayes, where the SSBN is now saved correctly (correct CPTs). I also included XMLBIF as a default plugin for MEBN.

--- a/unbbayes.prs.mebn/pom.xml
+++ b/unbbayes.prs.mebn/pom.xml
@@ -236,11 +236,6 @@
 		<dependencies>
 			<!-- This is a plugin project for UnBBayes. Since it uses classes from the core, 
 			     UnBBayes is indeed a dependency -->
-			<dependency>
-				<groupId>br.unb.cic</groupId>
-				<artifactId>unbbayes</artifactId>
-				<version>4.1.0</version>
-			</dependency>
 			
 		<!-- PROTEGE-OWL -->
 		<!--
@@ -333,7 +328,13 @@
 			<version>2.8.1</version>
 		</dependency>
 			
-	</dependencies>
+		<dependency>
+			<groupId>br.unb.cic</groupId>
+			<artifactId>unbbayes</artifactId>
+			<version>4.2.2</version>
+			<optional>false</optional>
+		</dependency>
+		</dependencies>
 	<reporting>
 		<plugins>
 			<plugin>
