--- a/unbbayes.pomc/pomcPlugin/.project
+++ b/unbbayes.pomc/pomcPlugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MSBN</name>
+	<name>umpstPlugin</name>
 	<comment></comment>
 	<projects>
 	</projects>
