--- a/unbbayes.pomc/pomcPlugin/plugins/unbbayes.pomc/plugin.xml
+++ b/unbbayes.pomc/pomcPlugin/plugins/unbbayes.pomc/plugin.xml
@@ -16,7 +16,7 @@
         </library>
     </runtime>
     <extension plugin-id="unbbayes.util.extension.core" point-id="Module" id="POMC">
-        <parameter id="class" value="unbbayes.gui.pomc.PomcModule" />
+        <parameter id="class" value="unbbayes.gui.umpst.UmpstModule" />
         <parameter id="name" value="POMC" />
         <!-- If  PomcModule doesen'have default construtor, i'll need to add a new parameter 
         here <parameter id="builder" value="PomcModuleBuilder">  -->
